fixing footer spacing

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -547,8 +547,8 @@ p.listed_text {
 }
 
 footer {
-  padding-top: 3.5rem;
-  padding-bottom: 3.5rem;
+  padding-top: 3rem;
+  padding-bottom: 3rem;
   background-color:rgb(71, 71, 71);
   justify-content: center;
   text-align: center;
